compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__invalid_pattern_assignment_name.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: let assert 42 as theAnswer = 42
---
----- SOURCE CODE
let assert 42 as theAnswer = 42

----- ERROR
error: Invalid variable name
  ┌─ /src/one/two.gleam:1:18
  │
1 │ let assert 42 as theAnswer = 42
  │                  ^^^^^^^^^ This is not a valid variable name

Hint: Variable names start with a lowercase letter and contain a-z, 0-9, or
_.
Try: the_answer
